login session, certificate download fixed